--- a/home.css
+++ b/home.css
@@ -159,6 +159,10 @@ h3 {
   padding-bottom: 10px;
 }
 
+.profile-container h1{
+  display:flex;
+  justify-content: center;
+}
 .profile-container div {
   margin-bottom: 20px;
 }
